// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normal 1`] = `
Array [
  Object {
    "children": undefined,
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "parentKeys": Array [
      "/",
    ],
    "path": "/welcome",
    "routes": null,
  },
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "children": undefined,
        "component": "./Welcome",
        "icon": "smile",
        "key": "/admin/sub-page",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "parentKeys": Array [
          "/",
          "/admin",
        ],
        "path": "/admin/sub-page",
        "routes": null,
      },
    ],
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "name": "管理页",
    "parentKeys": Array [
      "/",
    ],
    "path": "/admin",
    "routes": null,
  },
  Object {
    "children": undefined,
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "parentKeys": Array [
      "/",
    ],
    "path": "/list",
    "routes": null,
  },
]
`;

exports[`normal 2`] = `
Map {
  "/user" => Object {
    "layout": false,
    "path": "/user",
    "routes": Array [
      Object {
        "component": "./user/login",
        "layout": false,
        "name": "login",
        "path": "/user/login",
      },
    ],
  },
  "/welcome" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "parentKeys": Array [
      "/",
    ],
    "path": "/welcome",
    "routes": null,
  },
  "/admin/sub-page" => Object {
    "access": "canAdmin",
    "component": "./Welcome",
    "icon": "smile",
    "key": "/admin/sub-page",
    "locale": "menu.admin.sub-page",
    "name": "二级管理页",
    "parentKeys": Array [
      "/",
      "/admin",
    ],
    "path": "/admin/sub-page",
    "routes": null,
  },
  "/admin" => Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "component": "./Welcome",
        "icon": "smile",
        "key": "/admin/sub-page",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "parentKeys": Array [
          "/",
          "/admin",
        ],
        "path": "/admin/sub-page",
        "routes": null,
      },
    ],
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "name": "管理页",
    "parentKeys": Array [
      "/",
    ],
    "path": "/admin",
    "routes": null,
  },
  "/list" => Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "parentKeys": Array [
      "/",
    ],
    "path": "/list",
    "routes": null,
  },
}
`;

exports[`normal ignoreFilter 1`] = `
Array [
  Object {
    "layout": false,
    "path": "/user",
    "routes": Array [
      Object {
        "component": "./user/login",
        "layout": false,
        "name": "login",
        "path": "/user/login",
      },
    ],
  },
  Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "parentKeys": Array [
      "/",
    ],
    "path": "/welcome",
    "routes": null,
  },
  Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "component": "./Welcome",
        "icon": "smile",
        "key": "/admin/sub-page",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "parentKeys": Array [
          "/",
          "/admin",
        ],
        "path": "/admin/sub-page",
        "routes": null,
      },
    ],
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "name": "管理页",
    "parentKeys": Array [
      "/",
    ],
    "path": "/admin",
    "routes": null,
  },
  Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "parentKeys": Array [
      "/",
    ],
    "path": "/list",
    "routes": null,
  },
]
`;

exports[`normal ignoreFilter 2`] = `
Map {
  "/user" => Object {
    "layout": false,
    "path": "/user",
    "routes": Array [
      Object {
        "component": "./user/login",
        "layout": false,
        "name": "login",
        "path": "/user/login",
      },
    ],
  },
  "/welcome" => Object {
    "component": "./Welcome",
    "icon": "smile",
    "key": "/welcome",
    "locale": "menu.welcome",
    "name": "欢迎",
    "parentKeys": Array [
      "/",
    ],
    "path": "/welcome",
    "routes": null,
  },
  "/admin/sub-page" => Object {
    "access": "canAdmin",
    "component": "./Welcome",
    "icon": "smile",
    "key": "/admin/sub-page",
    "locale": "menu.admin.sub-page",
    "name": "二级管理页",
    "parentKeys": Array [
      "/",
      "/admin",
    ],
    "path": "/admin/sub-page",
    "routes": null,
  },
  "/admin" => Object {
    "access": "canAdmin",
    "children": Array [
      Object {
        "access": "canAdmin",
        "component": "./Welcome",
        "icon": "smile",
        "key": "/admin/sub-page",
        "locale": "menu.admin.sub-page",
        "name": "二级管理页",
        "parentKeys": Array [
          "/",
          "/admin",
        ],
        "path": "/admin/sub-page",
        "routes": null,
      },
    ],
    "component": "./Admin",
    "icon": "crown",
    "key": "/admin",
    "locale": "menu.admin",
    "name": "管理页",
    "parentKeys": Array [
      "/",
    ],
    "path": "/admin",
    "routes": null,
  },
  "/list" => Object {
    "component": "./ListTableList",
    "icon": "table",
    "key": "/list",
    "locale": "menu.list.table-list",
    "name": "查询表格",
    "parentKeys": Array [
      "/",
    ],
    "path": "/list",
    "routes": null,
  },
}
`;
